Remove removed utils/enoent.c from POTFILES.in

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-19  Frank Lichtenheld  <djpig@debian.org>
+
+	* POTFILES.in: Remove utils/enoent.c
+	since it doesn't exist anymore.
+
 2008-01-14  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 928t.
