Update .pot and .po files for dpkg-dev
* dpkg-dev.pot: Regenerated.
* *.po: Merged with dpkg-dev.pot.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-19  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
+
 2008-01-04  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 483t.
