dpkg-buildpackage: add a new -R option and allow parameters in -r
* scripts/dpkg-buildpackage.pl: Add a new -R option to be able to replace
"debian/rules" by something else. The replacement command can contain
parameters (and thus spaces). Fix -r option to also accept parameters.
* man/dpkg-buildpackage.1: Document the new option and the changed
behaviour of -r.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-01-29  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: Add a new -R option to be able to replace
+	"debian/rules" by something else. The replacement command can contain
+	parameters (and thus spaces). Fix -r option to also accept parameters.
+	* man/dpkg-buildpackage.1: Document the new option and the changed
+	behaviour of -r.
+
 2008-01-28  Guillem Jover  <guillem@debian.org>
 
 	* getopt: Rename to ...
