--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     build-depends/conflicts. Closes: #114774
   * Include list of libraries in dpkg-gensymbols' warning about new/lost
     libraries.
+  * Add -R option to dpkg-buildpackage so that one can replace the usual
+    "debian/rules" by something else. Closes: #355654
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
