dpkg-checkbuilddeps: add -d and -c options to override build-depends/conflicts
* scripts/dpkg-checkbuilddeps.pl: Add support of options -d and -c to use
build dependencies/conflicts given on the command line instead of those
retrieved from debian/control.
* man/dpkg-checkbuilddeps.1: Document the new options.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,11 @@
 	* scripts/dpkg-genchanges.pl: Warn if the current version is
 	smaller than the previous one.
 
+	* scripts/dpkg-checkbuilddeps.pl: Add support of options -d and -c to use
+	build dependencies/conflicts given on the command line instead of those
+	retrieved from debian/control.
+	* man/dpkg-checkbuilddeps.1: Document the new options.
+
 2008-01-22  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/extract.c (extracthalf): Refactor fflush and its buggy
