dpkg-checkbuilddeps: fix a bug in handling of build-conflicts

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 	Dpkg::Changelog::parse_changelog() instead of calling
 	dpkg-parsechangelog.
 
+	* scripts/dpkg-checkbuilddeps.pl: Fix a bug left-over from the
+	switch to Dpkg::Control.
+
 2008-01-18  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs/SymbolFile.pm,
