--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-20  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (do_help): Change from 'Mandatory' to
+	'Matching'. Suggested by Justin Pryzby.
+
 2008-01-19  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Use
