--- a/man/start-stop-daemon.8
+++ b/man/start-stop-daemon.8
@@ -1,4 +1,4 @@
-.TH start\-stop\-daemon 8 "2007-09-08" "Debian Project" "dpkg utilities"
+.TH start\-stop\-daemon 8 "2008-01-20" "Debian Project" "dpkg utilities"
 .SH NAME
 start\-stop\-daemon \- start and stop system daemon programs
 .
@@ -10,9 +10,7 @@ start\-stop\-daemon \- start and stop system daemon programs
 .SH DESCRIPTION
 .B start\-stop\-daemon
 is used to control the creation and termination of system-level processes.
-Using the
-.BR \-\-exec ", " \-\-pidfile ", " \-\-user ", and " \-\-name " options,"
-.B start\-stop\-daemon
+Using one of the matching options, \fBstart\-stop\-daemon\fP
 can be configured to find existing instances of a running process.
 .PP
 Note: unless
@@ -77,30 +75,32 @@ Show usage information and exit.
 .BR \-V ", " \-\-version
 Show the program version and exit.
 .
-.SH OPTIONS
-.TP
-.BR \-x ", " \-\-exec " \fIexecutable\fP"
-Check for processes that are instances of this executable (according to
-\fB/proc/\fIpid\fP/exe\fR).
+.SH MATCHING OPTIONS
 .TP
 .BR \-p ", " \-\-pidfile " \fIpid-file\fP"
 Check whether a process has created the file
 .IR pid-file .
 .TP
-.BR \-u ", " \-\-user " \fIusername\fP|\fIuid\fP
-Check for processes owned by the user specified by
-.I username
-or
-.IR uid .
-.TP
-.BR \-g ", " \-\-group " \fIgroup\fP|\fIgid\fP"
-Change to \fIgroup\fP or \fIgid\fP when starting the process.
+.BR \-x ", " \-\-exec " \fIexecutable\fP"
+Check for processes that are instances of this executable (according to
+\fB/proc/\fIpid\fP/exe\fR).
 .TP
 .BR \-n ", " \-\-name " \fIprocess-name\fP"
 Check for processes with the name
 .I process-name
 (according to
 .BR /proc/\fIpid\fB/stat\fP ).
+.TP
+.BR \-u ", " \-\-user " \fIusername\fP|\fIuid\fP
+Check for processes owned by the user specified by
+.I username
+or
+.IR uid .
+.
+.SH OPTIONS
+.TP
+.BR \-g ", " \-\-group " \fIgroup\fP|\fIgid\fP"
+Change to \fIgroup\fP or \fIgid\fP when starting the process.
 .TP
 .BR \-s ", " \-\-signal " \fIsignal\fP"
 With
