Switch Maintainer address to <debian-dpkg@lists.debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Demote dselect from priority important to optional. Closes: #461327
   * Fix portability issues on HP-UX, by not using backticks inside double
     quotes in m4 files. Closes: #24514
+  * Switch Maintainer address to <debian-dpkg@lists.debian.org> from
+    <team@dpkg.org>.
 
   [ Frank Lichtenheld ]
   * Make the -L option of dpkg-parsechangelog actually work (it's
