Escape new lines in AC_CHECK_FUNCS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-21  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac (AC_CHECK_FUNCS): Escape new lines.
+
 2008-01-21  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* src/processarc.c (process_archive): Fix incorrect sizeof in a
