Unfuzzy formerly completed translations now back to 928t

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
+	* de.po, eu.po, fr.po, gl.po, nb.po, ru.po, sv.po: Update to 928t.
+	* vi.po, zh_CN.po: Likewise.
+
+2008-01-21  Guillem Jover  <guillem@debian.org>
+
 	* dpkg.pot: Regenerated.
 	* *.po: Merged with dpkg.pot.
 
