--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -19,12 +19,12 @@
 
 2008-01-12  Jacobo Tarrio  <jtarrio@debian.org>
 
-	* gl.po: Updated to 928f.
+	* gl.po: Updated to 928t.
 
 2008-01-07  Christian Perrier  <bubulle@debian.org>
 
-	* de.po, eu.po, fr.po, nb.po, sv.po, vi.po, zh_CN.po:
-	  Updated to 928f.
+	* de.po, eu.po, fr.po, nb.po, sv.po, vi.po: Updated to 928t.
+	* zh_CN.po: Likewise.
 
 2008-01-07  Piarres Beobide  <pi@beobide.net>
 
