Add README.feature-removal-schedule and README.api

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
+	* README.api: New file.
+	* README.feature-removal-schedule: Likewise.
+	* Makefile.am (EXTRA_DIST): Add README.feature-removal-schedule and
+	README.api.
+
+2008-01-21  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac (AC_CHECK_FUNCS): Escape new lines.
 
 2008-01-21  Ian Jackson  <ian@davenant.greenend.org.uk>
