--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.16.
+
+2008-01-21  Guillem Jover  <guillem@debian.org>
+
 	* README.api: New file.
 	* README.feature-removal-schedule: Likewise.
 	* Makefile.am (EXTRA_DIST): Add README.feature-removal-schedule and
