--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.16) UNRELEASED; urgency=low
+dpkg (1.14.16) unstable; urgency=low
 
   [ Guillem Jover ]
   * Add build-essential as an implicit Build-Depends in dpkg-checkbuilddeps.
@@ -85,7 +85,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #460708
   * Swedish (Peter Karlsson).
 
- -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 12 Jan 2008 12:27:22 +0000
+ -- Guillem Jover <guillem@debian.org>  Mon, 21 Jan 2008 10:00:45 +0200
 
 dpkg (1.14.15) unstable; urgency=low
 
