--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.17) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 21 Jan 2008 10:11:55 +0200
+
 dpkg (1.14.16) unstable; urgency=low
 
   [ Guillem Jover ]
