Replace strdup plus error checking usage with a new m_strdup function
Closes: #379028

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
+	* lib/mlib.c (m_strdup): New function.
+	* lib/dpkg.h (m_strdup): New declaration.
+	* lib/tarfn.c: Include <dpkg.h>.
+	(TarExtractor): Use m_strdup instead of strdup.
+	* lib/database.c (findpackage): Likewise.
+	* lib/myopt.c (myfileopt): Likewise.
+	* dpkg-deb/build.c (getfi): Likewise.
+	* src/configure.c (md5hash): Likewise.
+	* src/help.c (vbuildarglist): Likewis.
+	* src/main.c (execbackend): Likewise.
+	(commandfd): Likewise.
+
+2008-01-21  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Bump version to 1.14.17~.
 
 2008-01-21  Guillem Jover  <guillem@debian.org>
