--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.14.17) UNRELEASED; urgency=low
 
-  *
+  [ Guillem Jover ]
+  * Replace strdup plus error checking usage with a new m_strdup function.
+    Closes: #379028
 
  -- Guillem Jover <guillem@debian.org>  Mon, 21 Jan 2008 10:11:55 +0200
 
