--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-01-21  Colin Watson  <cjwatson@debian.org>
+
+	* dselect/pkgkeys.cc (packagelist_korgbindings): Add 'C'.
+	(packagelist_kinterps): Add 'revertinstalled'.
+	* dselect/bindings.cc (keybindings::descriptions): Likewise.
+	* dselect/pkglist.h (class packagelist): Add kd_revertinstalled.
+	* dselect/pkgcmds.cc (packagelist::kd_revertinstalled): New method.
+	* man/dselect.1: Document new 'C' keybinding.
+
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/build.c (getfi): Use m_malloc instead of malloc.
