--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.14.16.1) unstable; urgency=low
+
+  * Add libtimedate-perl to dpkg-dev's Depends and to Build-Depends.
+    Reported by Aurelien Jarno. Closes: #461875
+
+ -- Frank Lichtenheld <djpig@debian.org>  Mon, 21 Jan 2008 12:48:51 +0100
+
 dpkg (1.14.16) unstable; urgency=low
 
   [ Guillem Jover ]
