--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2008-01-21  Frank Lichtenheld  <djpig@debian.org>
 
+	* configure.ac: Release 1.14.16.1
+
 	* debian/control: Add libtimedate-perl to
 	dpkg-dev's Depends and to Build-Depends (for
 	build-time tests). This introduces our first
