dpkg-source: Fix "uninitialized value" warning

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* configure.ac: Release 1.14.16.1
 
+	* scripts/dpkg-source.pl: Fix "uninitialized value"
+	warning.
+
 	* debian/control: Add libtimedate-perl to
 	dpkg-dev's Depends and to Build-Depends (for
 	build-time tests). This introduces our first
