Check for 'stddef.h' in AC_CHECK_HEADERS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-22  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac (AC_CHECK_HEADERS): Check for 'stddef.h'.
+
 2008-01-21  Colin Watson  <cjwatson@debian.org>
 
 	* dselect/pkgkeys.cc (packagelist_korgbindings): Add 'C'.
