dpkg-deb: Refactor fflush and its buggy fpos handling to safe_fflush()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-01-22  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb/extract.c (extracthalf): Refactor fflush and its buggy
+	fpos handling to ...
+	(safe_fflush): ... here. New function.
+
+2008-01-22  Guillem Jover  <guillem@debian.org>
+
 	* lib/vercmp.c [0] (verrevcmp): Remove dead code.
 
 2008-01-22  Guillem Jover  <guillem@debian.org>
