s-s-d: Change uid after changing gid and initalizing supplementary groups
Closes: #462018

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-22  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (main): Move setuid code after initgroups
+	and setgid.
+
 2008-01-21  Frank Lichtenheld  <djpig@debian.org>
 
 	* configure.ac: Release 1.14.16.1
