Move dpkg Breaks on dpkg-dev (= 1.14.13) and (= 1.14.14) to Conflicts
So that users from etch can upgrade to sid (or lenny once dpkg has
migrated). Those Conflicts should be removed before lenny's release.

--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@ lenny
  * Triage as much bugs as possible to get the bug count below 300 ;) and
    merge as much patches as possible.
 
+ * Remove Conflicts on dpkg-dev exact versions before the release.
+
 1.14.x
 ------
 
