--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ dpkg (1.14.16.2) UNRELEASED; urgency=low
 
   * Change uid after changing gid and initializing supplementary groups in
     start-stop-daemon. Closes: #462018
+  * Change temporary dpkg Breaks on dpkg-dev (= 1.14.13) and (= 1.14.14)
+    to Conflicts, so that users from etch can upgrade to sid (or lenny
+    once dpkg has migrated).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 22 Jan 2008 12:52:11 +0200
 
