--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-22  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.16.2.
+
+2008-01-22  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (main): Move setuid code after initgroups
 	and setgid.
 
