--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.16.2) UNRELEASED; urgency=low
+dpkg (1.14.16.2) unstable; urgency=low
 
   * Change uid after changing gid and initializing supplementary groups in
     start-stop-daemon. Closes: #462018
@@ -6,7 +6,7 @@ dpkg (1.14.16.2) UNRELEASED; urgency=low
     to Conflicts, so that users from etch can upgrade to sid (or lenny
     once dpkg has migrated).
 
- -- Guillem Jover <guillem@debian.org>  Tue, 22 Jan 2008 12:52:11 +0200
+ -- Guillem Jover <guillem@debian.org>  Tue, 22 Jan 2008 13:05:22 +0200
 
 dpkg (1.14.16.1) unstable; urgency=low
 
