--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.14.16.3) UNRELEASED; urgency=low
+
+  * Remove the ":utf8" layer that utf8-encodes already valid utf8.
+    Closes: #462098
+
+ -- Raphael Hertzog <hertzog@debian.org>  Tue, 22 Jan 2008 18:15:42 +0100
+
 dpkg (1.14.16.2) unstable; urgency=low
 
   * Change uid after changing gid and initializing supplementary groups in
