Update, unfuzzy and correct German scripts translation   *Completed dpkg-gensymbols.pl & dpkg-parsechangelog.pl   *Fixed broken string   *Add more translations   *Unfuzzy

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-22  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 311t0f172u.
+
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
