--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     whatever's currently installed. Closes: #151540
     Thanks to Colin Watson.
 
+  [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
+
  -- Guillem Jover <guillem@debian.org>  Mon, 21 Jan 2008 10:11:55 +0200
 
 dpkg (1.14.16.2) unstable; urgency=low
