Disable variable substitution in dpkg-genchanges
* scripts/dpkg-genchanges.pl: Do not substitute variables on
the output.
* man/dpkg-genchanges.pl: Document this change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
 	scripts/dpkg-source.pl: Remove the IO-layer that converts to
 	UTF-8. It's not as smart as I expected.
 
+	* scripts/dpkg-genchanges.pl: Do not substitute variables on
+	the output.
+	* man/dpkg-genchanges.pl: Document this change.
+
 2008-01-22  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Release 1.14.16.2.
