Re-Complete and unfuzzy German man page translation (except dselect)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     whatever's currently installed. Closes: #151540
     Thanks to Colin Watson.
 
+  [ Updated manpages translations ]
+  * German (Helge Kreutzmann).
+
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
 
