dpkg-parsechangelog(1): fix two typos
* man/dpkg-parsechangelog.1: Fix typos reported by Helge Kreutzmann.
* man/po/*.po: Update all translations accordingly.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-22  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-parsechangelog.1: Fix typos reported by Helge Kreutzmann.
+	* po/*.po: Update all translations accordingly.
+
 2008-01-22  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1389t0f33u.
