--- a/man/dpkg-parsechangelog.1
+++ b/man/dpkg-parsechangelog.1
@@ -39,7 +39,7 @@ Show the version and exit.
 .SS Parser Options
 The following options can be used to influence the output of
 the changelog parser, e.g. the range of entries or the format
-of the output. They need to supported by the parser script
+of the output. They need to be supported by the parser script
 in question. See also \fBCAVEATS\fP.
 .TP
 .BI \-\-format " outputformat"
@@ -48,7 +48,7 @@ Set the output format. Currently supported values are
 \fIdpkg\fP is the classic output format (from before this
 option existed) and the default. It consists of one paragraph
 in Debian control format (see \fBdeb-control\fP(5)). If more
-than one entry is requested, most fields are taken from the
+than one entry is requested, then most fields are taken from the
 latest entry, except otherwise stated:
 .RS
 .TP
