--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6759,7 +6759,7 @@ msgstr "Parser-Optionen:"
 msgid ""
 "The following options can be used to influence the output of the changelog "
 "parser, e.g. the range of entries or the format of the output. They need to "
-"supported by the parser script in question. See also B<CAVEATS>."
+"be supported by the parser script in question. See also B<CAVEATS>."
 msgstr ""
 "Die folgenden Optionen können verwendet werden, um die Ausgabe des Changelog-"
 "Parsers zu beinflussen, z.B. den Bereich der Einträge oder das Format der "
@@ -6778,7 +6778,7 @@ msgid ""
 "Set the output format. Currently supported values are I<dpkg> and "
 "I<rfc822>.  I<dpkg> is the classic output format (from before this option "
 "existed) and the default. It consists of one paragraph in Debian control "
-"format (see B<deb-control>(5)). If more than one entry is requested, most "
+"format (see B<deb-control>(5)). If more than one entry is requested, then most "
 "fields are taken from the latest entry, except otherwise stated:"
 msgstr ""
 "Setze das Ausgabeformat. Derzeit werden die Werte I<dpkg> und I<rfc822> "
