--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
+  * Swedish (Peter Karlsson).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 21 Jan 2008 10:11:55 +0200
 
