--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-22  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1422t.
+
 2008-01-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-parsechangelog.1: Fix typos reported by Helge Kreutzmann.
