--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-04  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 482t1u.
+
 2008-01-22  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* de.po: Updated to 311t0f172u.
